[gd_scene load_steps=6 format=3 uid="uid://vx0v73uughwh"]

[ext_resource type="PackedScene" uid="uid://beic3gevjusuj" path="res://scenes/PushableObject/pushable_object.tscn" id="1_fcvi1"]
[ext_resource type="Script" path="res://scenes/FilterAbsorption/filter_absorption.gd" id="2_6pd1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uol1q"]
size = Vector2(2, 197)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0i2m"]
size = Vector2(2, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q41vn"]
size = Vector2(2, 200)

[node name="FilterAbsorption" instance=ExtResource("1_fcvi1")]
position = Vector2(379, 408)
script = ExtResource("2_6pd1d")
filterIndex = 2.0
filterWidth = 16
filterHeight = 120
filterAbsorbance = Color(0, 0, 1, 1)

[node name="Center" type="StaticBody2D" parent="Stage" index="0"]

[node name="CenterColl" type="CollisionShape2D" parent="Stage/Center" index="0"]
shape = SubResource("RectangleShape2D_uol1q")

[node name="Left" type="StaticBody2D" parent="Stage" index="1"]

[node name="WallLeftColl" type="CollisionShape2D" parent="Stage/Left" index="0"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_a0i2m")

[node name="Right" type="StaticBody2D" parent="Stage" index="2"]

[node name="WallRightColl" type="CollisionShape2D" parent="Stage/Right" index="0"]
position = Vector2(11, 0)
shape = SubResource("RectangleShape2D_q41vn")

[node name="ColorRect" type="ColorRect" parent="Stage" index="3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -124.0
offset_right = -52.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
